--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hydyco-auth",
-  "version": "1.0.0",
+  "name": "@hydyco/auth",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
