📦 NEW: password hash

--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@hydyco/mongoose-plugin": "git+ssh://git@github.com/iamrahultanwar/hydyco-mongoose-plugin.git",
     "@types/jsonwebtoken": "^8.5.4",
+    "bcrypt": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.5",
     "tsc-watch": "^4.4.0",
