--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "tsc-watch --onSuccess \"node ./index.js\""
+    "start": "tsc-watch --onSuccess \"node ./index.js\"",
+    "test": "echo 'Test Done'"
   },
   "keywords": [],
   "dependencies": {
-    "@hydyco/mongoose-plugin": "^0.0.6",
+    "@hydyco/mongoose-plugin": "^0.0.7",
     "bcrypt": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.1",
