--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hydyco/auth",
-  "version": "0.0.9",
+  "version": "0.0.11",
   "description": "Auth module for Hydyco",
   "main": "index.js",
   "scripts": {
@@ -10,16 +10,16 @@
   },
   "keywords": [],
   "dependencies": {
-    "@hydyco/mongoose-plugin": "^0.0.9",
+    "@hydyco/core": "^0.0.11",
     "bcrypt": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^8.5.4",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.12",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/node": "^15.12.5",
     "tsc-watch": "^4.4.0",
     "typescript": "^4.3.4"
