--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hydyco/auth",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "Auth module for Hydyco",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,6 @@
   },
   "keywords": [],
   "dependencies": {
-    "@hydyco/core": "^0.0.12",
     "bcrypt": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.1",
@@ -23,6 +22,9 @@
     "@types/node": "^15.12.5",
     "tsc-watch": "^4.4.0",
     "typescript": "^4.3.4"
+  },
+  "peerDependencies": {
+    "@hydyco/core": "^0.0.13"
   },
   "author": "Rahul Tanwar <mr.rahultanwar@gmail.com>",
   "license": "ISC",
